# FastAPI_storage

./: .dockerignore  Dockerfile  Tiltfile  alembic.ini  config.py  docker-compose.yml  pyproject.toml
.kube/: deployment.yaml  ingressroute.yaml  kubernetes-services.yaml  middle-ware.yaml  postgres-deployment.yaml  postgres-pv-pvc.yaml
Deploy/: Dockerfile
Tests/: doc_load.py  user_reg.py
Tests/locust/: config.py  locust_test.py
kubectl/: kind.yaml
migrations/: env.py
migrations/versions/: 0ae6d40d94fd_initial.py  24423b1eae53_names_changing.py  6d79aca749ff_db_creation_2.py  7f64ca8d2c01_database_creation.py  859cc165443e_add_docs_2.py  9287210d93f2_referals_creation.py  a7293dd1d535_initial_4.py  af84093c3323_referrals.py  b284271f6e88_initial_2.py  c012ef093a4f_initial_3.py  d3c15f033895_db_creation.py  ee228c0cf1ef_add_docs.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/docs/: models.py  schemas.py
ssl/: acme.json
