[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Spartsmen <aapyzhov56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
