[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"

[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Spartsmen <aapyzhov56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
faker = "^19.13.0"
locust = "^2.18.1"
influxdb-client = {extras = ["async"], version = "^1.38.0"}
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
